[gd_scene load_steps=7 format=3 uid="uid://q457e32bd7kd"]

[ext_resource type="Script" path="res://Items/item_shop/BuyButton.gd" id="1_7u1b6"]
[ext_resource type="Texture2D" uid="uid://casgcgwhawukl" path="res://Items/items.png" id="1_tpjqc"]
[ext_resource type="Texture2D" uid="uid://d4anf1aiba5pd" path="res://Items/item_shop/item_shop_buy_button1.png" id="2_623eg"]
[ext_resource type="Texture2D" uid="uid://bjp5b2115y4r7" path="res://Items/item_shop/item_shop_buy_button3.png" id="3_vbkws"]
[ext_resource type="Texture2D" uid="uid://cf3sewbwa4fdl" path="res://Items/item_shop/item_shop_buy_button2.png" id="4_fqm36"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3w033"]
atlas = ExtResource("1_tpjqc")
region = Rect2(32, 32, 32, 32)

[node name="BuyButton" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_7u1b6")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.5
offset_right = 64.5
offset_bottom = 138.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_3w033")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -48.0
offset_right = 84.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_623eg")
texture_pressed = ExtResource("3_vbkws")
texture_hover = ExtResource("4_fqm36")

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_buy_button_pressed"]
